[DSTEW-1578] - Add more test coverage